# server

./: .gitignore  README.md  main.py  pyproject.toml
test/: sound_test.py
